[package]
name = "blvm-datum"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "DATUM Gateway mining protocol module for blvm-node"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-datum"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "mining", "datum", "ocean", "module"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "blvm-datum"
path = "src/main.rs"

[lib]
name = "blvm_datum"
path = "src/lib.rs"

[dependencies]
# blvm-node for module system integration
blvm-node = { path = "../blvm-node", package = "blvm-node" }
# blvm-sdk for ModuleBootstrap (env-based bootstrap)
blvm-sdk = { path = "../blvm-sdk", default-features = false, features = ["node"] }
blvm-sdk-macros = { path = "../blvm-sdk/crates/blvm-sdk-macros" }

# blvm-protocol for types
blvm-protocol = { path = "../blvm-protocol", package = "blvm-protocol" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Futures for async streams
futures = "0.3"

# Cryptography
sha2 = "0.10"
# DATUM protocol uses Ed25519 (signing) and X25519 (encryption)
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
rand = "0.8"
# For crypto_box_seal (NaCl sealed box encryption) - pure Rust, avoids blake2b linker conflict with sparse-merkle-tree
crypto_box = { version = "0.9", features = ["seal"] }

# Network (tokio includes networking)

# Serialization
bincode = "1.3"
hex = "0.4"

[dev-dependencies]
# Testing
tokio-test = "0.4"

